[package]
name = "hostapd-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.12", features = ["derive"] }
dashmap = { version = "5.5.3", features = ["serde"] }
linemux = "0.3.0"
nom = "7.1.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.109", features = ["indexmap", "preserve_order"] }
thiserror = "1.0.53"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = { version = "0.1.40", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
